--- a/StoryBoardTraining/StoryBoardTraining/Base.lproj/Main.storyboard
+++ b/StoryBoardTraining/StoryBoardTraining/Base.lproj/Main.storyboard
@@ -137,10 +137,11 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gur-EQ-ubb">
                                 <rect key="frame" x="324" y="275" width="31" height="30"/>
                                 <state key="normal" title="遷移"/>
-                                <connections>
-                                    <segue destination="rtm-pp-rUR" kind="show" id="3vJ-Cq-KZR"/>
-                                </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LeG-hK-jYF">
+                                <rect key="frame" x="46" y="225" width="154" height="131"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="w6M-vD-33O"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -164,22 +165,23 @@
                         <outlet property="SecondViewLabel" destination="MUb-jw-hZ0" id="SGv-03-7Os"/>
                         <outlet property="SecondViewTextField" destination="sQI-KE-Zxv" id="ShL-zk-Zh3"/>
                         <outlet property="actionButton" destination="RtS-rZ-oAp" id="pm7-Hy-tz0"/>
+                        <outlet property="imageView" destination="LeG-hK-jYF" id="BEN-m0-XLT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LQ5-Ko-6Qc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="922" y="-36"/>
+            <point key="canvasLocation" x="933.60000000000002" y="-36.206896551724142"/>
         </scene>
         <!--Third View Controller-->
         <scene sceneID="WOd-DW-9wk">
             <objects>
                 <viewController id="rtm-pp-rUR" customClass="ThirdViewController" customModule="StoryBoardTraining" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Suj-6h-lrP">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="JLD-0x-CzM">
-                                <rect key="frame" x="93.666666666666671" y="275" width="187.66666666666663" height="208"/>
+                                <rect key="frame" x="93.666666666666671" y="302" width="187.66666666666663" height="208"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yhb-sB-fp6">
                                         <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="187.66666666666666"/>
@@ -211,7 +213,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="wL2-Mi-hpe">
-                                <rect key="frame" x="93.666666666666671" y="563" width="187.66666666666663" height="30"/>
+                                <rect key="frame" x="93.666666666666671" y="590" width="187.66666666666663" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2r0-08-VQj">
                                         <rect key="frame" x="0.0" y="0.0" width="94" height="30"/>
@@ -236,6 +238,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="G1B-XJ-mwT"/>
+                    <connections>
+                        <outlet property="wetherImageView" destination="Yhb-sB-fp6" id="n5f-UC-I0J"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HjU-k8-HE4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
